--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,19 +7,21 @@
   <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Bilal Kareem Logo">
-    <div>
-      <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
+  <header style="background-color: #007bff; color: white; padding: 20px;">
+    <img src="logo.png" alt="Bilal Kareem Logo" style="width: 100px; height: auto; margin-right: 20px;">
+    <div style="display: inline-block; vertical-align: middle;">
+      <h1 style="margin: 0; font-size: 2.5em;">Bilal Olakunle Kareem</h1>
+      <h2 style="margin: 0; font-size: 1.5em;">DevSecOps Professional</h2>
       <p>
-        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
+        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank" style="color: white;">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?&style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
         </a>
       </p>
     </div>
   </header>
-  <main>
+  <main style="padding: 20px;">
     {{ content }}
   </main>
 </body>
 </html>
+
