--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <header style="background-color: #007bff; color: white; padding: 20px;">
-    <img src="logo.png" alt="Bilal Kareem Logo" style="width: 100px; height: auto; margin-right: 20px;">
-    <div style="display: inline-block; vertical-align: middle;">
-      <h1 style="margin: 0; font-size: 2.5em;">Bilal Olakunle Kareem</h1>
-      <h2 style="margin: 0; font-size: 1.5em;">DevSecOps Professional</h2>
+    <img src="logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
+    <div style="flex-grow: 1;">
+      <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
       <p>
-        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank" style="color: white;">
+        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?&style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
         </a>
       </p>
