--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,17 +3,24 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #007bff;
+  color: white;
+  padding: 20px;
 }
 
 header img {
-  width: 100px;
+  width: 200px;
   height: auto;
   margin-right: 20px;
 }
 
-header h1, header h2 {
+header h1 {
   margin: 0;
-  padding: 0;
+  font-size: 2.5em;
+}
+
+header p {
+  margin: 0;
 }
 
 .home-section {
@@ -48,4 +55,5 @@ table th {
 .tools img {
   margin: 5px;
 }
+
 
