--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 <body>
-  <header style="background-color: #007bff; color: white; padding: 20px;">
+  <header style="background-color: #333; color: white; padding: 20px;">
     <img src="logo.png" alt="Bilal Kareem Logo" style="width: 100px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
       <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
@@ -23,5 +24,4 @@
   </main>
 </body>
 </html>
-
 
