--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #007bff;
+  background-color: #333;
   color: white;
   padding: 20px;
 }
@@ -16,7 +16,7 @@ header img {
 
 header h1 {
   margin: 0;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 header p {
@@ -25,10 +25,13 @@ header p {
 
 .home-section {
   padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  margin-bottom: 20px;
 }
 
 h2 {
-  color: #343a40;
+  color: #333;
 }
 
 h3 {
@@ -44,16 +47,17 @@ table {
 
 table th, table td {
   padding: 10px;
-  border: 1px solid #dee2e6;
+  border: 1px solid #ddd;
 }
 
 table th {
-  background-color: #343a40;
+  background-color: #333;
   color: #ffffff;
 }
 
 .tools img {
   margin: 5px;
 }
+
 
 
