--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 <body>
-  <header style="background-color: #333; color: white; padding: 20px;">
-    <img src="{{ '/logo.png' | relative_url }}" alt="Bilal Kareem Logo" style="width: 100px; height: auto; margin-right: 20px;">
+  <header style="background-color: #003366; color: white; padding: 20px;">
+    <img src="{{ '/logo.png' | relative_url }}" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
       <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
       <p>
         <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
-          <img src="https://img.shields.io/badge/-LinkedIn-0072b1?&style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+          <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
         </a>
       </p>
     </div>
@@ -23,6 +23,7 @@
   </main>
 </body>
 </html>
+
 
 
 
