--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,22 +7,25 @@
   <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 </head>
 <body>
-  <header style="background-color: #003366; color: white; padding: 20px;">
-    <img src="{{ '/logo.png' | relative_url }}" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
-    <div style="flex-grow: 1;">
-      <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
-      <p>
-        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
-          <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
-        </a>
-      </p>
-    </div>
-  </header>
-  <main style="padding: 20px;">
-    {{ content }}
-  </main>
+  <div class="container">
+    <header style="display: flex; align-items: center; justify-content: space-between; background-color: #f7f7f7; padding: 20px;">
+      <img src="{{ '/logo.png' | relative_url }}" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
+      <div style="flex-grow: 1;">
+        <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
+        <p>
+          <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
+            <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+          </a>
+        </p>
+      </div>
+    </header>
+    <main style="padding: 20px;">
+      {{ content }}
+    </main>
+  </div>
 </body>
 </html>
+
 
 
 
