--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,17 @@
       </ul>
     </div>
   </nav>
+  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #4CAF50; padding: 20px;">
+    <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
+    <div style="flex-grow: 1;">
+      <h1 style="color: white;">Bilal Olakunle Kareem - DevSecOps Professional</h1>
+      <p>
+        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
+          <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+        </a>
+      </p>
+    </div>
+  </header>
   <div class="container mt-4">
     {{ content }}
   </div>
