--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,8 +18,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #f7f7f7;
-  color: black;
+  background-color: #4CAF50; /* Greenish color */
+  color: white;
   padding: 20px;
 }
 
@@ -73,4 +73,3 @@ table th {
 .tools img {
   margin: 5px;
 }
-
