--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
   <style>
     .navbar-custom {
-      background-color: #0072b1;
+      background-color: #a8d5ba; /* Lighter shade of green */
     }
     .navbar-custom .nav-link {
       color: #ffffff;
     }
     .navbar-custom .nav-link:hover {
-      color: #cccccc;
+      color: #333333;
     }
   </style>
 </head>
@@ -51,10 +51,10 @@
       </ul>
     </div>
   </nav>
-  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #4CAF50; padding: 20px;">
+  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #a8d5ba; padding: 20px;">
     <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
-      <h1 style="color: white;">Bilal Olakunle Kareem - DevSecOps Professional</h1>
+      <h1 style="color: #333;">Bilal Olakunle Kareem - DevSecOps Professional</h1>
       <p>
         <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
@@ -70,8 +70,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
 
 
 
