--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
   <style>
     .navbar-custom {
-      background-color: #a8d5ba; /* Lighter shade of green */
+      background-color: #87ceeb; /* Sky blue color */
     }
     .navbar-custom .nav-link {
       color: #ffffff;
@@ -51,7 +51,7 @@
       </ul>
     </div>
   </nav>
-  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #a8d5ba; padding: 20px;">
+  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #87ceeb; padding: 20px;">
     <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
       <h1 style="color: #333;">Bilal Olakunle Kareem - DevSecOps Professional</h1>
