--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,10 +52,10 @@
       </ul>
     </div>
   </nav>
-  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #87ceeb; padding: 20px;">
+  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #f7f7f7; padding: 20px;">
     <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
-      <h1 style="color: #333;">Bilal Olakunle Kareem - DevSecOps Professional</h1>
+      <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
       <p>
         <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
@@ -70,7 +71,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
 
 
 
