--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,22 +54,19 @@
   <header style="display: flex; align-items: center; justify-content: space-between; background-color: #f7f7f7; padding: 20px;">
     <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
-      <h1>Bilal Olakunle Kareem - DevSecOps Professional</h1>
+      <h1>- Bilal Olakunle Kareem- DevSecOps Engineer</h1>
       <p>
         <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+        </a>
+        <a href="https://github.com/CrescentTech29/technix.io" target="_blank">
+          <img src="https://img.shields.io/badge/-GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub">
         </a>
       </p>
     </div>
   </header>
   <div class="container mt-4">
     {{ content }}
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
 
 
 
