--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,9 +52,9 @@
     </div>
   </nav>
   <header style="display: flex; align-items: center; justify-content: space-between; background-color: #f7f7f7; padding: 20px;">
-    <img src="{{ site.baseurl }}/logo.png" alt="Bilal Kareem Logo" style="width: 200px; height: auto; margin-right: 20px;">
+    <img src="{{ site.baseurl }}/logo.png" alt="Logo" style="width: 200px; height: auto; margin-right: 20px;">
     <div style="flex-grow: 1;">
-      <h1>- Bilal Olakunle Kareem- DevSecOps Engineer</h1>
+      <h1>- Bilal Olakunle Kareem - DevSecOps Engineer</h1>
       <p>
         <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
           <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
