--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
   <style>
     .navbar-custom {
-      background-color: #87ceeb; /* Sky blue color */
+      background-color: #0072b1; /* Blue color */
     }
     .navbar-custom .nav-link {
       color: #ffffff;
     }
     .navbar-custom .nav-link:hover {
-      color: #333333;
+      color: #cccccc;
     }
   </style>
 </head>
@@ -51,20 +51,6 @@
       </ul>
     </div>
   </nav>
-  <header style="display: flex; align-items: center; justify-content: space-between; background-color: #f7f7f7; padding: 20px;">
-    <img src="{{ site.baseurl }}/logo.png" alt="Logo" style="width: 200px; height: auto; margin-right: 20px;">
-    <div style="flex-grow: 1;">
-      <h1>- Bilal Olakunle Kareem - DevSecOps Engineer</h1>
-      <p>
-        <a href="https://www.linkedin.com/in/bilaldevsec" target="_blank">
-          <img src="https://img.shields.io/badge/-LinkedIn-0072b1?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
-        </a>
-        <a href="https://github.com/CrescentTech29/technix.io" target="_blank">
-          <img src="https://img.shields.io/badge/-GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub">
-        </a>
-      </p>
-    </div>
-  </header>
   <div class="container mt-4">
     {{ content }}
   </div>
